Added methodology section to my projects

--- a/project_2.html
+++ b/project_2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Analysing Retail Sales</title>
+		<title>Analysing EBay's Data</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -57,6 +57,16 @@
 								why it collects and store data for almost every activity performed on its website. This project has
 								used data for this company to perform <b>data cleaning, exploration and initial data analysis</b>. 
 							</p>
+							<!--<p><strong>Problem Statement</strong></p>
+							<p>For our special problem, we were interested in how these different characteristics relate
+								to the total medical cost. We constructed the best possible predictive model 
+								for the cost given some information about the patient.<ol>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+							</ol></p>-->
 							<p><strong>Questions</strong></p>
 							<p>The following are the questions the project has answered:<ol>
 								<li>What are the popular car brands for the period of study?</li>
@@ -65,6 +75,16 @@
 								<!--<li>-</li>
 								<li>-</li>-->
 							</ol></p>
+							<!--<p><strong>Methodology</strong></p>
+							<p>For our special problem, we were interested in how these different characteristics relate
+								to the total medical cost. We constructed the best possible predictive model 
+								for the cost given some information about the patient.<ol>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+							</ol></p>-->
 							<p><strong>Summary of Results</strong></p>
 							<p><ol>
 								<li>Volkswagen has been found to be the most popular car by brand.</li>
@@ -72,6 +92,16 @@
 								<li>Cars with odometer readings of around <b>50,000</b> Kilometers are expensive 
 								on average than cars with odometer readings of at least <b>50,0000</b> Kilometers.</li>
 							</ol></p>
+							<!--<p><strong>Recommendations</strong></p>
+							<p>For our special problem, we were interested in how these different characteristics relate
+								to the total medical cost. We constructed the best possible predictive model 
+								for the cost given some information about the patient.<ol>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+							</ol></p>-->
 							<p style="font-weight: bold; text-align: center;">For more details, please refer to the full analysis by clicking on the following button:</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/mcbrownmwale/Data_Analytics_Project_2/blob/main/E_Bay_Cars_Project.ipynb" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
