--- a/project_3.html
+++ b/project_3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Main Project</title>
+		<title>Analysing Kickstarter Data</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -52,7 +52,18 @@
 							<p>For this project, we took on the role of a Data Analyst at a startup. 
 								The product team was considering launching a campaign on kickstarters 
 								to test the viability of some offerings. We were tasked to pull data 
-								that would help them understand what might influence the success of the campaign.</p>
+								that would help them understand what might influence the success of the 
+								campaign.</p>
+							<!--<p><strong>Problem Statement</strong></p>
+							<p>For our special problem, we were interested in how these different characteristics relate
+								to the total medical cost. We constructed the best possible predictive model 
+								for the cost given some information about the patient.<ol>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+							</ol></p>-->
 							<p><strong>Questions</strong></p>
 							<p>Specifically, the project was to answer the following questions:<ol>
 								<li>What types of projects are most likely to be successful?</li>
@@ -61,6 +72,16 @@
 								<li>-</li>
 								<li>-</li>-->
 							</ol></p>
+							<!--<p><strong>Methodology</strong></p>
+							<p>For our special problem, we were interested in how these different characteristics relate
+								to the total medical cost. We constructed the best possible predictive model 
+								for the cost given some information about the patient.<ol>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+							</ol></p>-->
 							<p><strong>Summary of Results</strong></p>
 							<p><ol>
 								<li>Projects that are well funded are most likely to be successful.</li>
@@ -69,6 +90,16 @@
 								<li>-</li>
 								<li>-</li>-->
 							</ol></p>
+							<!--<p><strong>Recommendations</strong></p>
+							<p>For our special problem, we were interested in how these different characteristics relate
+								to the total medical cost. We constructed the best possible predictive model 
+								for the cost given some information about the patient.<ol>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+							</ol></p>-->
 							<p style="font-weight: bold; text-align: center;">For more details, please refer to the full analysis by clicking on the following button:</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/mcbrownmwale/Data_Analytics_Project_1/blob/main/Kick_Starter%20Project.ipynb" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
