--- a/project_4.html
+++ b/project_4.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Main Project</title>
+		<title>Bike Share Sales Analysis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,6 +51,16 @@
 							<p><strong>Introduction</strong></p>
 							<p>This project was about analysing Bike Share sales to determine which factors are more likely 
 								to make a person own a bike or not. We used demographic and social-economic attributes for our analysis.</p>
+							<!--<p><strong>Problem Statement</strong></p>
+							<p>For our special problem, we were interested in how these different characteristics relate
+								to the total medical cost. We constructed the best possible predictive model 
+								for the cost given some information about the patient.<ol>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+							</ol></p>-->
 							<p><strong>Questions</strong></p>
 							<p>The project was set to answer the following questions:<ol>
 								<li>How does monthly income affect bike ownership?</li>
@@ -59,6 +69,16 @@
 								<!--<li>-</li>
 								<li>-</li>-->
 							</ol></p>
+							<!--<p><strong>Methodology</strong></p>
+							<p>For our special problem, we were interested in how these different characteristics relate
+								to the total medical cost. We constructed the best possible predictive model 
+								for the cost given some information about the patient.<ol>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+							</ol></p>-->
 							<p><strong>Summary of Results</strong></p>
 							<p><ol>
 								<li>People who earned a high income were more likely to own a bike.</li>
@@ -67,6 +87,16 @@
 								<!--<li>-</li>
 								<li>-</li>-->
 							</ol></p>
+							<!--<p><strong>Recommendations</strong></p>
+							<p>For our special problem, we were interested in how these different characteristics relate
+								to the total medical cost. We constructed the best possible predictive model 
+								for the cost given some information about the patient.<ol>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+								<li>-</li>
+							</ol></p>-->
 							<p style="font-weight: bold; text-align: center;">For more details, please refer to the full analysis by clicking on the following button:</p>
 							<ul class="actions special">
 								<li><a href="https://1drv.ms/x/c/c9ffcb8dd652be72/EUfTuYxQa3tDhVoieijtMQwBbRJnGV-OfAOggvIoNP0Rkg?e=1nVASS" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
