--- a/main_project.html
+++ b/main_project.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Main Project</title>
+		<title>Predicting Insurance Costs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -62,6 +62,26 @@
 									<li>-</li>
 									<li>-</li>-->
 								</ol></p>
+								<!--<p><strong>Questions</strong></p>
+								<p>For our special problem, we were interested in how these different characteristics relate
+									to the total medical cost. We constructed the best possible predictive model 
+									for the cost given some information about the patient.<ol>
+									<li>-</li>
+									<li>-</li>
+									<li>-</li>
+									<li>-</li>
+									<li>-</li>
+								</ol></p>-->
+								<!--<p><strong>Methodology</strong></p>
+								<p>For our special problem, we were interested in how these different characteristics relate
+									to the total medical cost. We constructed the best possible predictive model 
+									for the cost given some information about the patient.<ol>
+									<li>-</li>
+									<li>-</li>
+									<li>-</li>
+									<li>-</li>
+									<li>-</li>
+								</ol></p>-->
 								<p><strong>Summary of Results</strong></p>
 								<p><ol>
 									<li>A one year increase in a person's age would result into <b>5%</b> increase in insurance charges holding other features constant.</li>
@@ -70,6 +90,16 @@
 									<li>-</li>
 									<li>-</li>-->
 								</ol></p>
+								<!--<p><strong>Recommendations</strong></p>
+								<p>For our special problem, we were interested in how these different characteristics relate
+									to the total medical cost. We constructed the best possible predictive model 
+									for the cost given some information about the patient.<ol>
+									<li>-</li>
+									<li>-</li>
+									<li>-</li>
+									<li>-</li>
+									<li>-</li>
+								</ol></p>-->
 								<p style="font-weight: bold; text-align: center;">For more details, please refer to the full analysis by clicking on the following button:</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/mcbrownmwale/Data_Analytics_Project_3/blob/main/Predicting_Insurance_Costs.ipynb" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
