change of names

--- a/Resume.html
+++ b/Resume.html
@@ -45,7 +45,7 @@
 								<header class="major">
 									<span class="date">August 31, 2024</span>
 									<img src="Docs/profile-pic (1).png" class="center" width="200" height="200" />
-									<p style="font-size: 300%; font-family: serif; font-weight: bolder;">McBrown Mwale </p>
+									<p style="font-size: 300%; font-family: serif; font-weight: bolder;">McBrown Wilfred Mwale </p>
 									
 									<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 									
