--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>McBrown Wilfred Mwale</h1>
+						<h1>McBrown Mwale</h1>
 						<p style="font-size: 50px;"><strong><i>Data Analyst</i></strong></p>
 						<p><strong>|| Python | SQL | Tableau ||</strong></p>
 						<ul class="actions">
