have added a new certificate of completion in my resume

--- a/Resume.html
+++ b/Resume.html
@@ -73,7 +73,7 @@
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<p><strong><center><u>Experience</u></center></strong></p>
-								<p><u><strong><i>Data Analyst</i></strong> with <a href="" target="_blank"><strong>Kasiwa Academy</u></strong></a> <br /> <strong>Since July 2024</strong> </p>
+								<p><u><strong><i>Data Analyst</i></strong> at <a href="" target="_blank"><strong>Kasiwa Academy</u></strong></a> <br /> <strong>Since July 2024</strong> </p>
 								<ul>
 									<li>I utilise statistical tools, quality control techniques, and data mining processes to remove inaccuraces, improve reliability and performance of data pipelines.</li>
 									<li>I assist in the analysis of large sets of data resulting in a positive impact on the company's overall performance.</li>
@@ -97,7 +97,21 @@
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<p><strong><center><u>Professional Certification</u></center></strong></p>
-								<p>1. <strong><i><u>Junior Data Analyst</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - July 2024 </strong></p>
+								<p>1. <strong><i><u>Data Analyst in Python</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - November 2024 </strong></p>
+								<ul>
+									<li>Introduction to Python.</li>
+									<li>Intermediate Python, Numpy and Pandas.</li>
+									<li>Data Cleaning in Python.</li>
+									<li>The Command Line.</li>
+									<li>Working with Data Sources Using SQL.</li>
+									<li>APIs and Web Scraping in Python.</li>
+									<li>Probability and Statistics.</li>
+									<li>Git and Version Control.</li>
+								</ul>
+								<ul class="action special">
+									<a href="https://drive.google.com/file/d/16_wu8gQ1f3H9nXqPs0at3_svcAWhzRnH/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
+								</ul>
+								<p>2. <strong><i><u>Junior Data Analyst</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - July 2024 </strong></p>
 								<ul>
 									<li>Introduction to Data Analysis with Excel.</li>
 									<li>Fundamentals of SQL.</li>
@@ -108,7 +122,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/19BNJc0p1WVINJS_9IJmOt4J7gGo1I2x4/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<p>2. <strong><i><u>Business Analyst with Tableau</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - July 2024 </strong></p>
+								<p>3. <strong><i><u>Business Analyst with Tableau</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - July 2024 </strong></p>
 								<ul>
 									<li>Excel Fundamentals.</li>
 									<li>Fundamentals of SQL.</li>
@@ -120,7 +134,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/1H0mpQLjHOeAfe7zg9vv6cIFJIJ7gVFBQ/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<p>3. <strong><i><u>Introduction to Data Analysis with Excel</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April 2024 - July 2024 </strong></p>
+								<p>4. <strong><i><u>Introduction to Data Analysis with Excel</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April 2024 - July 2024 </strong></p>
 								<ul>
 									<li>Preparing Data in Excel.</li>
 									<li>Visualising Data in Excel.</li>
@@ -145,8 +159,8 @@
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<p><strong><center><u>Tools</u></center></strong></p>
 								<ul>
-									<li>Python for Data Analysis [Pandas, Numpy, Matplotlib, Seaborn].</li>
-									<li>SQL [PostgreSQL, MySQL, MS Sql].</li>
+									<li>Python for Data Analysis [Pandas, Seaborn, statsmodels and scikit-learn].</li>
+									<li>SQL [PostgreSQL & SQLite].</li>
 									<li>Tableau.</li>
 									<li>Excel</li>
 								</ul>
