have added a new projects to my portifolio website

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 										<li><a href="./project_2.html" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<!--<article>
+								<article>
 									<header>
 										<span class="date">February 01, 2025</span>
-										<h2><a href="./project_3.html">Analysing KickStarter Data</a></h2>
+										<h2><a href="./project_3.html">Analysing KickStarter Projects</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_3.html" class="image fit"><img src="Images/stock-market.jpg" alt="" width="200" height="300" /></a>
@@ -103,7 +103,7 @@
 										<li><a href="./project_3.html" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
+								<!--<article>
 									<header>
 										<span class="date">February 01, 2025</span>
 										<h2><a href="./project_4.html">Bike Share Sales Analysis</a></h2>
