--- a/project_3.html
+++ b/project_3.html
@@ -102,7 +102,7 @@
 							</ol></p>-->
 							<p style="font-weight: bold; text-align: center;">For more details, please refer to the full analysis by clicking on the following button:</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/mcbrownmwale/Data_Analytics_Project_1/blob/main/Kick_Starter%20Project.ipynb" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
+								<li><a href="https://github.com/mcbrownmwale/Kick_Starter/blob/main/Kickstarter.ipynb" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
 							</ul>
 							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
 						</section>
