made changes to the css stylesheet

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>McBrown Mwale</h1>
-						<p style="font-size: 50px;"><strong><i>Data Analyst</i></strong></p>
-						<p><strong>|| Python | SQL | Tableau ||</strong></p>
+						<h2><i>Data Analyst</i></h2>
+						<h3>|| Python | SQL | Tableau ||</h3>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
