Updated my projects

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 									<p><strong> Python </strong></p>
 								</header>
 								<img src="Images/analytics 10.jfif" class="image main" alt="" />
-								<p><center>Machine Learning Project</center></p>
+								<p><center>This Project Demonstrates proficiency in Data Cleaning, Feature Engineering,
+									 Exploratory Data Analysis (EDA), Regression Modelling and Model Evaluation.</center></p>
 								<ul class="actions special">
 									<li><a href="./main_project.html" class="button large">View Project</a></li>
 								</ul>
@@ -97,8 +98,8 @@
 										<h2><a href="./project_3.html">Analysing KickStarter Projects</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
-									<a href="./project_3.html" class="image fit"><img src="Images/stock-market.jpg" alt="" width="200" height="300" /></a>
-									<p><center>___</center></p>
+									<a href="./project_3.html" class="image fit"><img src="Images/Kickstarter.jpg" alt="" width="200" height="300" /></a>
+									<p><center>This Project Demonstrates proficiency in Data Cleaning, Exploratory Data Analysis and use of Structured Query Language (SQL).</center></p>
 									<ul class="actions special">
 										<li><a href="./project_3.html" class="button">View Project</a></li>
 									</ul>
