Update my projects

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
 									<a href="./project_2.html" class="image fit"><img src="Images/ebay.jpg" alt="" width="200" height="300" /></a>
-									<p><center>___</center></p>
+									<p><center>This project demonstrates proficiency in data cleaning, 
+										feature engineering, exploratory data analysis (EDA), and data visualization.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_2.html" class="button">View Project</a></li>
 									</ul>
