--- a/project_2.html
+++ b/project_2.html
@@ -48,6 +48,7 @@
 								<p><b>Tools</b>: Python [ Pandas | Matplotlib | Seaborn ]</p>
 							</header>
 							<!--<div class="image main"><img src="images/analytics 1.jfif" alt="" /></div> -->
+							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
 							<h3>1. Introduction</h3>
 							<p>This project explores a dataset of used cars listed on eBay Kleinanzeigen, 
 								a German online marketplace for classified ads. The dataset consists of secondhand car
@@ -62,6 +63,7 @@
 								<!--<li>-</li>
 								<li>-</li>-->
 							</ol>
+							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
 							<h3>2. Methodology</h3>
 							<h4>2.1 Data Exploration and Cleaning</h4>
 							<h4><em>Dataset Overview</em></h4>
@@ -74,26 +76,42 @@
 							</ul>
 							<h4><em>Data Cleaning Steps</em></h4>
 							<ul>
-								<li>Renamed Columns: Converted from camelCase to snake_case for better readability and consistency.</li>
-								<li><b>Handled Missing Values:</b>
+								<li><b>Renamed Columns:</b> Converted from camelCase to snake_case for better readability and consistency.</li>
+								<li><b>Handled Missing Values:</b> Replaced missing categorical values with <i>"Unknown."</i></li>
+								<li><b>Removed Duplicates:</b> Identified and removed 2 duplicate records.</li>
+								<li><b>Corrected Data Types: </b>
+										<ul>
+											<li>Converted odometer from text to integer.</li>
+											<li>Transformed date columns into datetime format.</li>
+											<li>Standardized categorical variables with German words to English equivalents.</li>
+										</ul>
+								</li>
+								<li><b>Filtered Outliers: </b>
 									<ul>
-										<li>Categorical columns with missing values were filled with "Unknown."</li>
-										<li>o	Affected columns included vehicle_type, gear_box, model, fuel_type, and unrepaired_damage.</li>
+										<li>Removed unrealistic registration years.</li>
+										<li>Adjusted price range (excluded values below $500 and above $100,000).</li>
 									</ul>
 								</li>
-								<li></li>
-								<li></li>
 							</ul>
-							<!--<p><strong>Recommendations</strong></p>
-							<p>For our special problem, we were interested in how these different characteristics relate
-								to the total medical cost. We constructed the best possible predictive model 
-								for the cost given some information about the patient.<ol>
-								<li>-</li>
-								<li>-</li>
-								<li>-</li>
-								<li>-</li>
-								<li>-</li>
-							</ol></p>-->
+							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
+							<h3>3. Data Analysis and Insights</h3>
+							<h4>3.1 Popular Car Brands</h4>
+							<div class="center"><img src="Images/bar1.png" alt="" width="400" height="400" /></div>
+							<h4>3.2 Most Expensive Car Brands (Average Price)</h4>
+							<div class="center"><img src="Images/bar2.png" alt="" width="400" height="400" /></div>
+							<h4>3.3Car Price vs. Mileage Analysis</h4>
+							<p>As expected, higher mileage results into lower prices</p>
+							<div class="center"><img src="Images/pie.png" alt="" width="400" height="400" /></div>
+							<hr style="height: 2px; border-width: 0; color:rgba(190, 188, 188, 0.986); background-color: rgba(190, 188, 188, 0.986);">
+							<h3>4. Conclusion</h3>
+							<ul>
+								<li><b>Volkswagen</b> is the most frequently listed brand.</li>
+								<li><b>Porsche</b> commands the highest average price among brands.</li>
+								<li><b>Higher mileage vehicles generally have lower prices</b>, confirming depreciation trends.</li>
+								<li>The dataset has been thoroughly cleaned and pre-processed, making it suitable for further 
+									predictive modelling and analysis.</li>
+								<!--<li>-</li>-->
+							</ul>
 							<p style="font-weight: bold; text-align: center;">For more details, please refer to the full analysis by clicking on the following button:</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/mcbrownmwale/Data_Analytics_Project_2/blob/main/E_Bay_Cars_Project.ipynb" class="button" target="_blank" style="background-color: rgb(0, 204, 255);">Go To Analysis</a></li>
