updated my website

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>McBrown Mwale</h1>
+						<h2 style="color: rgb(221, 161, 161); font-size: xx-large;">McBrown Mwale</h2>
 						<h2><i>Data Analyst</i></h2>
 						<h3>|| Python | SQL | Tableau ||</h3>
 						<ul class="actions">
@@ -55,7 +55,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">February 01, 2025</span>
-									<h2><a href="./main_project.html">Predicting Insurance Costs</a></h2>
+									<h2><a href="./main_project.html" style="color: deepskyblue;">Predicting Insurance Costs</a></h2>
 									<p><strong> Python </strong></p>
 								</header>
 								<img src="Images/analytics 10.jfif" class="image main" alt="" />
@@ -71,11 +71,11 @@
 								<article>
 									<header>
 										<span class="date">February 01, 2025</span>
-										<h2><a href="./project_1.html">Amazon Sales for Africa</a></h2>
+										<h2><a href="./project_1.html" style="color: deepskyblue;">Amazon Sales for Africa</a></h2>
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
 									<a href="./project_1.html" class="image fit"><img src="Images/amazon_.jfif" alt="" width="200" height="300" /></a>
-									<p><center>___</center></p>
+									<p><center>This project demonstrates proficiency in Data Cleaning, Exploratory Data Analysis (EDA) and Data Visualisation using Tableau</center></p>
 									<ul class="actions special">
 										<li><a href="./project_1.html" class="button">View Project</a></li>
 									</ul>
@@ -83,7 +83,7 @@
 								<article>
 									<header>
 										<span class="date">February 01, 2025</span>
-										<h2><a href="./project_2.html">Ebay Kleinanzein Cars data</a></h2>
+										<h2><a href="./project_2.html" style="color: deepskyblue;">Ebay Kleinanzein Cars data</a></h2>
 										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
 									<a href="./project_2.html" class="image fit"><img src="Images/ebay.jpg" alt="" width="200" height="300" /></a>
@@ -96,7 +96,7 @@
 								<article>
 									<header>
 										<span class="date">February 01, 2025</span>
-										<h2><a href="./project_3.html">Analysing KickStarter Projects</a></h2>
+										<h2><a href="./project_3.html" style="color: deepskyblue;">Analysing KickStarter Projects</a></h2>
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_3.html" class="image fit"><img src="Images/Kickstarter.jpg" alt="" width="200" height="300" /></a>
