--- a/Resume.html
+++ b/Resume.html
@@ -45,7 +45,7 @@
 								<header class="major">
 									<span class="date">February 01, 2025</span>
 									<img src="Docs/profile-pic (1).png" class="center" width="200" height="200" />
-									<p style="font-size: 300%; font-family: serif; font-weight: bolder;">McBrown Mwale </p>
+									<h2>McBrown Mwale </h2>
 									
 									<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 									
@@ -56,10 +56,10 @@
 								</header>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<!--<div class="image main"><img src="images/analytics 1.jfif" alt="" /></div>-->
-								<p><strong><u><center>About Me</center></u></strong></p>
+								<h3><center>About Me</center></h3>
 								<p>A dynamic and organised Data Analyst with more than two years experience utilising a variety of programs to generate data driven insights and improve organisational processes. Expert in creating and optimising databases, forecasting trends and patterns, and designing capability-driven data visualisations. </p>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
-								<p><strong><center><u>Skills</u></center></strong></p>
+								<h3><center>Skills</center></h3>
 								<ul>
 									<li>Designing and creating meaningful data visualisation to report and communicate insights.</li>
 									<li>Collecting and assimilating data from multiple sources, both internal and external.</li>
@@ -72,7 +72,7 @@
 									<li>Utilizing technologies such as statistical and graphical tools to drive data insights.</li>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
-								<p><strong><center><u>Experience</u></center></strong></p>
+								<h3><center>Experience</center></h3>
 								<p><u><strong><i>Data Analyst</i></strong> at <a href="" target="_blank"><strong>Kasiwa Academy</u></strong></a> <br /> <strong>Since July 2024</strong> </p>
 								<ul>
 									<li>I utilise statistical tools, quality control techniques, and data mining processes to remove inaccuraces, improve reliability and performance of data pipelines.</li>
@@ -82,7 +82,7 @@
 									<li>I make Data Analytics lessons for the Organisation's social media platforms.</li>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
-								<p><strong><center><u>Education</u></center></strong></p>
+								<h3><center>Education</center></h3>
 								<p>1. <strong><i><u>Bachelors of Social Science in Economics</i></strong> from <strong>Catholic University of Malawi</strong></u><br /><strong>August 2012 - September 2016 </strong></p>
 								<ul>
 									<li>Economics.</li>
@@ -96,7 +96,7 @@
 									<a href="https://drive.google.com/file/d/1o10oyvx_v7N8uCIc0MR2MtQzZRWDp_Mx/view?usp=sharing" class="button" target="_blank">Transcript</a>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
-								<p><strong><center><u>Professional Certification</u></center></strong></p>
+								<h3><center>Professional Certification</center></h3>
 								<p>1. <strong><i><u>Data Analyst in Python</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - November 2024 </strong></p>
 								<ul>
 									<li>Introduction to Python.</li>
@@ -157,7 +157,7 @@
 									<a href="https://drive.google.com/file/d/1lz-nwmfYsb30ZDeuGlOusBkFH6nreYvT/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
-								<p><strong><center><u>Tools</u></center></strong></p>
+								<h3><center>Tools</center></h3>
 								<ul>
 									<li>Python for Data Analysis [Pandas, Seaborn, statsmodels and scikit-learn].</li>
 									<li>SQL [PostgreSQL & SQLite].</li>
@@ -165,11 +165,10 @@
 									<li>Excel</li>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
-								<p><strong><center><u>Passion</u></center></strong></p>
+								<h3><center>Passion</center></h3>
 								<ul>
 									<li>Python programming for Data Analytics.</li>
-									<li>Web Development with HTML, CSS and JavaScript.</li>
-									<li>Teaching Mathematics and Computer Studies.</li>
+									<li>Teaching Mathematics and Data Skills.</li>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 							</section>
