Updated my portfolio website

--- a/Resume.html
+++ b/Resume.html
@@ -73,7 +73,7 @@
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<h3><center>Experience</center></h3>
-								<p><u><strong><i>Data Analyst</i></strong> at <a href="" target="_blank"><strong>Kasiwa Academy</u></strong></a> <br /> <strong>Since July 2024</strong> </p>
+								<h3><u>Data Analyst: <a href="" target="_blank" style="color: rgb(5, 46, 160);">Kasiwa Academy</u></a></h3>
 								<ul>
 									<li>I utilise statistical tools, quality control techniques, and data mining processes to remove inaccuraces, improve reliability and performance of data pipelines.</li>
 									<li>I assist in the analysis of large sets of data resulting in a positive impact on the company's overall performance.</li>
@@ -83,7 +83,7 @@
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
 								<h3><center>Education</center></h3>
-								<p>1. <strong><i><u>Bachelors of Social Science in Economics</i></strong> from <strong>Catholic University of Malawi</strong></u><br /><strong>August 2012 - September 2016 </strong></p>
+								<h3><u>Bachelor of Social Sciences (Economics): <a href="" target="_blank" style="color: rgb(5, 46, 160);">Catholic University of Malawi</u></a></h3>
 								<ul>
 									<li>Economics.</li>
 									<li>Mathematical Economics.</li>
@@ -96,8 +96,8 @@
 									<a href="https://drive.google.com/file/d/1o10oyvx_v7N8uCIc0MR2MtQzZRWDp_Mx/view?usp=sharing" class="button" target="_blank">Transcript</a>
 								</ul>
 								<hr style="height: 2px; border-width: 0; color:slategray; background-color: slategray;">
-								<h3><center>Professional Certification</center></h3>
-								<p>1. <strong><i><u>Data Analyst in Python</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - November 2024 </strong></p>
+								<h3><center>Professional Certificates</center></h3>
+								<h3><u>Data Analytics in Python: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
 									<li>Introduction to Python.</li>
 									<li>Intermediate Python, Numpy and Pandas.</li>
@@ -111,7 +111,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/16_wu8gQ1f3H9nXqPs0at3_svcAWhzRnH/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<p>2. <strong><i><u>Junior Data Analyst</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - July 2024 </strong></p>
+								<h3><u>Junior Data Analyst: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
 									<li>Introduction to Data Analysis with Excel.</li>
 									<li>Fundamentals of SQL.</li>
@@ -122,7 +122,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/19BNJc0p1WVINJS_9IJmOt4J7gGo1I2x4/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<p>3. <strong><i><u>Business Analyst with Tableau</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - July 2024 </strong></p>
+								<h3><u>Business Analyst with Tableau: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
 									<li>Excel Fundamentals.</li>
 									<li>Fundamentals of SQL.</li>
@@ -134,7 +134,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/1H0mpQLjHOeAfe7zg9vv6cIFJIJ7gVFBQ/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<p>4. <strong><i><u>Introduction to Data Analysis with Excel</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>April 2024 - July 2024 </strong></p>
+								<h3><u>Introduction to Data Analysis with Excel: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
 									<li>Preparing Data in Excel.</li>
 									<li>Visualising Data in Excel.</li>
@@ -145,7 +145,7 @@
 								<ul class="action special">
 									<a href="https://drive.google.com/file/d/1gR9Z5IsF45vJbrQxdm2ZSa3fvrp5pZ9g/view?usp=sharing" class="button" target="_blank">View Certificate</a>  
 								</ul>
-								<p>4. <strong><i><u>SQL Fundamentals</i></strong> from <strong>DataQuest.io</strong></u><br /><strong>January 2024 - July 2024 </strong></p>
+								<h3><u>SQL Fundamentals: <a href="" target="_blank" style="color: rgb(5, 46, 160);">DataQuest.io</u></a></h3>
 								<ul>
 									<li>Introduction to SQL and Databases.</li>
 									<li>Summarising Data in SQL.</li>
