--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h2 style="color: rgb(221, 161, 161); font-size: xx-large;">McBrown Mwale</h2>
-						<h2><i>Data Analyst</i></h2>
+						<h1>McBrown Mwale</h1>
+						<h2>Data Analyst</h2>
 						<h3>|| Python | SQL | Tableau ||</h3>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Portifolio</a>
+						<a href="index.html" class="logo">Projects</a>
 					</header>
 
 				<!-- Nav -->
@@ -59,8 +59,8 @@
 									<p><strong> Python </strong></p>
 								</header>
 								<img src="Images/analytics 10.jfif" class="image main" alt="" />
-								<p><center>This Project Demonstrates proficiency in Data Cleaning, Feature Engineering,
-									 Exploratory Data Analysis (EDA), Regression Modelling and Model Evaluation.</center></p>
+								<p><center>This Project Demonstrates proficiency in <b>Data Cleaning</b>, <b>Feature Engineering</b>,
+									 <b>Exploratory Data Analysis (EDA)</b>, <b>Regression Modelling</b> and <b>Model Evaluation</b>.</center></p>
 								<ul class="actions special">
 									<li><a href="./main_project.html" class="button large">View Project</a></li>
 								</ul>
@@ -75,7 +75,7 @@
 										<p style="text-align: center;"><strong>Tableau</strong></p>
 									</header>
 									<a href="./project_1.html" class="image fit"><img src="Images/amazon_.jfif" alt="" width="200" height="300" /></a>
-									<p><center>This project demonstrates proficiency in Data Cleaning, Exploratory Data Analysis (EDA) and Data Visualisation using Tableau</center></p>
+									<p><center>This project demonstrates proficiency in <b>Data Cleaning</b>, <b>Exploratory Data Analysis (EDA)</b> and <b>Data Visualisation</b> using <b>Tableau</b>.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_1.html" class="button">View Project</a></li>
 									</ul>
@@ -87,8 +87,8 @@
 										<p style="text-align: center;"><strong> Python </strong></p>
 									</header>
 									<a href="./project_2.html" class="image fit"><img src="Images/ebay.jpg" alt="" width="200" height="300" /></a>
-									<p><center>This project demonstrates proficiency in data cleaning, 
-										feature engineering, exploratory data analysis (EDA), and data visualization.</center></p>
+									<p><center>This project demonstrates proficiency in <b>Data Cleaning</b>, 
+										<b>Feature Engineering</b>, <b>Exploratory Data Analysis (EDA)</b> and <b>Data Visualization</b> using <b>Matplotlib</b>.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_2.html" class="button">View Project</a></li>
 									</ul>
@@ -100,7 +100,8 @@
 										<p style="text-align: center;"><strong>SQL</strong></p>
 									</header>
 									<a href="./project_3.html" class="image fit"><img src="Images/Kickstarter.jpg" alt="" width="200" height="300" /></a>
-									<p><center>This Project Demonstrates proficiency in Data Cleaning, Exploratory Data Analysis and use of Structured Query Language (SQL).</center></p>
+									<p><center>This Project Demonstrates proficiency in <b>Data Cleaning</b>, 
+										<b>Exploratory Data Analysis</b> and use of <b>Structured Query Language (SQL)</b>.</center></p>
 									<ul class="actions special">
 										<li><a href="./project_3.html" class="button">View Project</a></li>
 									</ul>
